# sugarplum

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
src/sugarplum/: __init__.py
tests/: test_core.py
