[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sugarplum"
dynamic = ["version"]
description = "A library to manage inputs for Advent of Code puzzles"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Stephen Lutes" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/stephenlutes/sugarplum#readme"
Issues = "https://github.com/stephenlutes/sugarplum/issues"
Source = "https://github.com/stephenlutes/sugarplum"

[tool.hatch.version]
path = "src/sugarplum/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/sugarplum tests}"

[tool.coverage.run]
source_pkgs = ["sugarplum", "tests"]
branch = true
parallel = true
omit = [
  "src/sugarplum/__about__.py",
]

[tool.coverage.paths]
sugarplum = ["src/sugarplum", "*/sugarplum/src/sugarplum"]
tests = ["tests", "*/sugarplum/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]